// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-brqgnP dzoIro"
  >
    <div
      class="sc-bdVaJa kwzqrW"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-brqgnP dzoIro"
  >
    <div
      class="sc-jhAzac lbnAwQ"
    >
      <div
        class="sc-fMiknA dHODfP"
      >
        Max column width:
        <input
          class="sc-dVhcbM jSEKgL"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-VigVT cFrzpB"
  >
    <div
      class="sc-iRbamj fUfKqK"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-VigVT cFrzpB"
  >
    <pre
      class="sc-cMljjf eZjnjT"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
